2001-07-28  Michael Meeks  <michael@ximian.com>

	* tests/Makefile.am: install test-moniker.

	* tests/test-moniker.c: add POPT_AUTOHELP

2001-07-27  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-control.c (window_id_demangle): rename to
	(bonobo_control_x11_from_window_id): this, and publicise.
	(bonobo_control_windowid_from_x11): rename to
	(bonobo_control_window_id_from_x11): this & add compat macro.

	* bonobo/bonobo-control-frame.c (bonobo_control_frame_set_remote_window): upd.

2001-07-24  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-main.c (bonobo_ui_init_full): init. bonobo
	inside here - of course :-)

2001-07-23  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-component.c (impl_set_prop): re-write to use
	setAttr.
	(impl_get_prop): upd. for getAttr.

	* bonobo/bonobo-ui-container.c (impl_Bonobo_UIContainer_getAttr),
	(impl_Bonobo_UIContainer_setAttr): impl.
	(bonobo_ui_container_class_init): hook em up.

	* bonobo/bonobo-ui-engine.c (bonobo_ui_engine_xml_set_prop):
	forward port from Alex's bonobo 1.0 UI work
	(bonobo_ui_engine_xml_get_prop): ditto.

2001-07-23  Martin Baulig  <baulig@suse.de>

	* bonobo/bonobo-ui-engine-config.[ch]: Ported to GObject.

	* bonobo/bonobo-ui-sync.[ch]: Ported to GObject.
	* bonobo/bonobo-ui-sync-keys.[ch]: Ported to GObject.
	* bonobo/bonobo-ui-sync-menus.[ch]: Ported to GObject.
	* bonobo/bonobo-ui-sync-toolbar.[ch]: Ported to GObject.
	* bonobo/bonobo-ui-sync-status.[ch]: Ported to GObject.

2001-07-23  Martin Baulig  <baulig@suse.de>

	* bonobo/bonobo-widget.c (bonobo_widget_construct_control):
	`bw->priv->server' is already a CORBA_Object, don't call
	BONOBO_OBJREF on it.

2001-07-23  Martin Baulig  <baulig@suse.de>

	* bonobo/bonobo-ui-engine.c (BonoboUIEngineClass): Added
	"destroy" signal.

	* bonobo/bonobo-ui-container.c
	(bonobo_ui_container_set_engine): Connect to the engine's
	"destroy" signal.

2001-07-22  Martin Baulig  <baulig@suse.de>
