@@ -1,3 +1,8 @@
+2001-07-28  Murray Cumming  <murrayc@usa.net>
+
+	* tests/test-ui.c: Corrected the 'can't find std-ui.xml'
+	  warning - ~/.gnome/ui is no longer used.
+
 2001-07-28  Michael Meeks  <michael@ximian.com>
 
 	* tests/Makefile.am: install test-moniker.
